adding Qtum generate wallet
