# qtum-connector/module/src/openapi.yaml
@@ -73,6 +73,39 @@ paths:
       summary: Generate QTUM account address from Extended public key
       tags:
         - Blockchain / QTUM
+  /v3/qtum/wallet:
+    get:
+      description: |
+        <h4>1 credit per API call.</h4><br/><p>Tatum supports BIP44 HD wallets. Because they can generate 2^31 addresses from 1 mnemonic phrase, they are very convenient and secure. A mnemonic phrase consists of 24 special words in a defined order and can restore access to all generated addresses and private keys.<br/>Each address is identified by 3 main values:<ul><li>Private Key - your secret value, which should never be revealed</li><li>Public Key - public address to be published</li><li>Derivation index - index of generated address</li></ul></p><p>Tatum follows BIP44 specification and generates for QTUM wallet with derivation path m/44'/2301'/0'/0. More about BIP44 HD wallets can be found here - <a target="_blank" href="https://github.com/bitcoin/bips/blob/master/bip-0044.mediawiki">https://github.com/bitcoin/bips/blob/master/bip-0044.mediawiki</a>.
+        <br />Generate BIP44 compatible Qtum wallet.</p>
+      operationId: QtumGenerateWallet
+      parameters:
+        - description: "Mnemonic to use for generation of extended public and private keys."
+          in: query
+          name: mnemonic
+          required: true
+          schema:
+            type: string
+            maxLength: 500
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Wallet"
+          description: OK
+        400:
+          <<: *API400
+        401:
+          <<: *API401
+        500:
+          <<: *API500
+      security:
+        - X-Api-Key: [ ]
+      x-code-samples:
+      summary: Generate QTUM wallet
+      tags:
+        - Blockchain / QTUM
   /v3/qtum/block/current:
     get:
       description: "<h4>1 credit per API call.</h4><br/><p>Get QTUM current block number. This is the number of the latest block in the blockchain.</p>"
@@ -192,7 +225,7 @@ paths:
       tags:
         - Blockchain / QTUM
 
-  /v3/qtum/account/{address}/balance:
+  /v3/qtum/account/balance/{address}:
     get:
       description: "<h4>1 credit per API call.</h4><br/><p>Get QTUM account balance in QTUM tokens on an account.</p>"
       operationId: QtumGetBalance
@@ -464,6 +497,18 @@ paths:
         - Blockchain / QTUM
 components:
   schemas:
+    Wallet:
+      type: object
+      properties:
+        mnemonic:
+          maxLength: 500
+          minLength: 1
+          description: Mnemonic to generate private key for the account of QTUM, from which the gas will be paid (index will be used).
+          example: "urge pulp usage sister evidence arrest palm math please chief egg abuse"
+          type: string
+        xpub:
+          type: string
+          example: xpub6EsCk1uU6cJzqvP9CdsTiJwT2rF748YkPnhv5Qo8q44DG7nn2vbyt48YRsNSUYS44jFCW9gwvD9kLQu9AuqXpTpM1c5hgg9PsuBLdeNncid
     GeneratePrivateKey:
       type: object
       properties:
